[package]
name = "bluetooth-autoconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backon = "0.4.1"
bluer = { version = "0.15.7", features = ["bluetoothd"] }
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
